Fixed issue with animation on 'the code' when on small screens Corrected spacing on fullscreen views caused by responsive commit

--- a/styles/Motion.module.css
+++ b/styles/Motion.module.css
@@ -1,11 +1,3 @@
-.mainSlide {
-    height: 100%;
-    width: 100%;
-    display: flex;
-    flex-direction: row;
-    justify-content: center;
-    align-items: center;
-}
 
 .center{
     display: flex;
@@ -69,9 +61,26 @@
 
 .project{
     width: 90%;
-    height: 88%;
 }
 
 .max{
-    flex: 100%
+    display: flex;
+    flex: 1;
+    width: 100%;
+}
+
+.mainSlide{
+    height: 100%;
+    min-width: 100%;
+}
+
+.full{
+    position: relative;
+    z-index: auto;
+}
+
+.min{
+    position: sticky;
+    top: 0;
+    z-index: 1;
 }
