--- a/styles/globals.css
+++ b/styles/globals.css
@@ -18,6 +18,7 @@ a {
   height: 100%;
   display: flex;
   flex-direction: column;
+  width: 100%;
 }
 
 
